--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,12 @@
     "jsx": "preserve",
     "incremental": false,
     "paths": {
-      "components/*": ["./components/*"],
-      "constants/*": ["./constants/*"]
+      "components/*": [
+        "./components/*"
+      ],
+      "constants/*": [
+        "./constants/*"
+      ]
     }
   },
   "include": [
@@ -25,6 +29,7 @@
   ],
   "exclude": [
     "node_modules",
-    ".yarn",
-  ]
+    ".yarn"
+  ],
+  "extends": "expo/tsconfig.base"
 }
