--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "tsx && app/**/*.tsx components/**/*.tsx",
-    "lint:fix": "tsc && eslint app/**/*.tsx components/**/*.tsx --fix",
-    "prettier": "prettier app/**/*.tsx components/**/*.tsx --check",
-    "prettier:fix": "prettier app/**/*.tsx components/**/*.tsx --write"
+    "lint": "tsc && eslint *.tsx components/**/*.tsx",
+    "lint:fix": "tsc && eslint *.tsx components/**/*.tsx --fix",
+    "prettier": "prettier *.tsx components/**/*.tsx --check",
+    "prettier:fix": "prettier *.tsx components/**/*.tsx --write"
   },
   "dependencies": {
     "@expo/webpack-config": "19.0.0",
@@ -26,10 +26,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/eslint-parser": "^7.23.3",
-    "@types/react": "~18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "@types/react": "~18.2.14",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.56.0",
