--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notion_widget",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "App.tsx",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -21,14 +21,15 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-native": "0.72.6",
     "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
-    "@types/react": "~18.2.14",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.56.0",
