--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
   "plugins": ["@typescript-eslint", "import"],
   "extends": ["plugin:@typescript-eslint/recommended-type-checked", "prettier"],
   "rules": {
+    "@typescript-eslint/no-unused-vars": "warn",
     "import/order": [
       1,
       { "groups": ["external", "builtin", "internal", "sibling", "parent", "index"] }
