--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "tsc && eslint *.tsx components/**/*.tsx",
-    "lint:fix": "tsc && eslint *.tsx components/**/*.tsx --fix",
-    "prettier": "prettier *.tsx components/**/*.tsx --check",
-    "prettier:fix": "prettier *.tsx components/**/*.tsx --write"
+    "lint": "tsc && eslint  src/**/*.tsx",
+    "lint:fix": "tsc && eslint src/**/*.tsx --fix",
+    "prettier": "prettier src/**/*.tsx --check",
+    "prettier:fix": "prettier src/**/*.tsx --write"
   },
   "dependencies": {
     "@expo/webpack-config": "19.0.0",
@@ -21,9 +21,8 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "^4.0.12",
     "react-native": "0.72.6",
-    "react-native-web": "^0.19.10"
+    "react-native-exception-handler": "^2.10.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
