--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "jsx": "preserve",
     "incremental": false,
     "paths": {
+      "hooks/*": ["./src/hooks/*"],
       "components/*": ["./src/components/*"],
       "constants/*": ["./src/constants/*"]
     }
