--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/webpack-config": "19.0.0",
     "@notionhq/client": "^2.2.14",
     "expo": "~49.0.15",
+    "expo-checkbox": "^2.7.0",
     "expo-secure-store": "^12.5.0",
     "expo-splash-screen": "^0.22.0",
     "expo-status-bar": "~1.6.0",
