--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,11 +6,27 @@
   },
   "plugins": ["@typescript-eslint", "import"],
   "extends": ["plugin:@typescript-eslint/recommended-type-checked", "prettier"],
-  "rules": {
-    "@typescript-eslint/no-unused-vars": "warn",
+   "rules": {
     "import/order": [
-      1,
-      { "groups": ["external", "builtin", "internal", "sibling", "parent", "index"] }
+      "error",
+      {
+        "groups": [
+          "external",
+          "builtin",
+          "internal",
+          "index",
+          "parent",
+          "sibling",
+          "type"
+        ],
+        "pathGroups": [
+          { "pattern": "@/src/hooks/*", "group": "internal", "position": "before" },
+          { "pattern": "@/src/components/*", "group": "internal" },
+          { "pattern": "../components/*", "group": "parent" },
+          { "pattern": "./components/*", "group": "sibling", "position": "before" },
+          { "pattern": "./*.module.scss", "group": "sibling", "position": "after" }
+        ]
+      }
     ],
     "@typescript-eslint/ban-ts-comment": 0,
     "no-unused-vars": "off"
