--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "jsx": "preserve",
     "incremental": false,
     "paths": {
+      "@/*": ["./src/*"],
       "@/hooks/*": ["./src/hooks/*"],
       "@/components/*": ["./src/components/*"],
       "@/constants/*": ["./src/constants/*"]
