--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "notion-to-md": "^3.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.5",
+    "react-native": "^0.73.5",
     "react-native-exception-handler": "^2.10.10",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
