--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "prettier:fix": "prettier src/**/*.tsx --write"
   },
   "dependencies": {
-    "@expo/webpack-config": "19.0.1",
+    "@expo/webpack-config": "^19.0.1",
     "@notionhq/client": "^2.2.14",
     "@reduxjs/toolkit": "^2.2.1",
-    "expo": "~50.0.8",
-    "expo-checkbox": "~2.7.0",
-    "expo-secure-store": "~12.8.1",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^50.0.11",
+    "expo-checkbox": "^2.7.0",
+    "expo-secure-store": "^12.8.1",
+    "expo-splash-screen": "^0.26.4",
+    "expo-status-bar": "^1.11.1",
     "notion-to-md": "^3.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "^0.73.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.73.6",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-exception-handler": "^2.10.10",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
@@ -32,16 +33,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@types/react": "~18.2.61",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
+    "@types/react": "^18.2.65",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "prettier": "^3.2.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.2"
   },
   "private": true
 }
