--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.1",
     "@notionhq/client": "^2.2.14",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@reduxjs/toolkit": "^2.2.1",
     "expo": "^50.0.11",
     "expo-checkbox": "^2.7.0",
